objects/agf__ADM_Work__c.object
<CustomObject>
    <fields>
        <fullName>agf__QA_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QA_Engineer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Readme_Notes__c</fullName>
        <inlineHelpText>How would you explain the change to customers? Try not to give away internal details. Be as general as possible.</inlineHelpText>
        <label>Readme Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Record_Type__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Red_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Red Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Regressed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regressed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Related_URL_Link__c</fullName>
        <formula>HYPERLINK(agf__Related_URL__c, agf__Related_URL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related URL Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Related_URL__c</fullName>
        <label>Related URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>agf__ADM_Release__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Request_RD_Mgr_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Senior Mgr Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Resolution__c</fullName>
        <inlineHelpText>App Bug Fix: caught a product bug 
Test Change: Due to app changes because the app behavior changed 
Test Change: Test issue only 
Test Removed/Disabled: no longer being run 
Not Reproducible: Unknown: no longer failing, reason not known</inlineHelpText>
        <label>Test Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>App Bug Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Change: Due to app changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Change: Test issue only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Removed/Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Test Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reproducible: Autobuild environment issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reproducible: SauceLabs issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reproducible: Broken By Another Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reproducible: Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reproducible: Other (please specify in Chatter feed)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Resolved_By__c</fullName>
        <label>Resolved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Resolved_On__c</fullName>
        <label>Resolved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Resolved__c</fullName>
        <formula>CASE( agf__Status__c, &quot;Fixed&quot;, 1, &quot;Tested&quot;, 1, &quot;Closed&quot;, 1, &quot;Completed&quot;, 1, &quot;Not Reproducible&quot;, 1, &quot;Not a bug&quot;, 1, &quot;Duplicate&quot;, 1,
&quot;Closed - Duplicate&quot;, 1, &quot;Closed - Known Bug Exists&quot;, 1, &quot;Never&quot;, 1,&quot;Closed-U/Ftest&quot;, 1, &quot;Closed-Untested&quot;, 1, &quot;QA In Progress&quot;, 1,
&quot;Closed - New Bug Logged&quot;, 1, &quot;Closed - No Fix - Working as Designed&quot;,1,
&quot;Closed - LAP Request Approved&quot;, 1, &quot;Closed - LAP Request Denied&quot;, 1, &quot;Closed - Resolved Without Code Change&quot;, 1,
&quot;Closed - No Fix - Feature Request&quot;,1, &quot;Closed - No Fix - Will Not Fix&quot;,1, &quot;Rejected&quot;, 1, &quot;Closed - Resolved With Internal Tools&quot;, 1, &quot;Closed - Defunct&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Root_Cause_Analysis_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to a related Root Cause Analysis record.</description>
        <label>Root Cause Analysis</label>
        <referenceTo>agf__RCA__c</referenceTo>
        <relationshipLabel>Work &amp; Action Plan</relationshipLabel>
        <relationshipName>Work1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Build_Copy__c</fullName>
        <label>Scheduled Build Copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Build_Name__c</fullName>
        <formula>agf__Scheduled_Build__r.Name</formula>
        <label>Scheduled Build Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Build_Rank__c</fullName>
        <label>Rank in a scheduled build for team</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Scheduled Build field is a lookup to the Build object.  Enter a pre-existing build where the change will be made.</inlineHelpText>
        <label>Scheduled Build</label>
        <referenceTo>agf__ADM_Build__c</referenceTo>
        <relationshipLabel>Work (Scheduled Build)</relationshipLabel>
        <relationshipName>Scheduled_Build</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_On__c</fullName>
        <description>Deprecated field from BF 1.0</description>
        <label>Scheduled On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Schema__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schema</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team_Last_Modified__c</fullName>
        <defaultValue>Now()</defaultValue>
        <description>Stores the last time the Scrum Team field was modified</description>
        <inlineHelpText>Stores the last time the Scrum Team field was modified</inlineHelpText>
        <label>Scrum Team Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team_Name__c</fullName>
        <formula>agf__Scrum_Team__r.Name</formula>
        <label>Scrum Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Scrumforce_ID__c</fullName>
        <externalId>true</externalId>
        <label>Scrumforce ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Senior_Management_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who gets engaged when an escalation of the current investigation occurs</description>
        <inlineHelpText>The person who gets engaged when an escalation of the current investigation occurs</inlineHelpText>
        <label>Senior Management POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Severity_Copy__c</fullName>
        <label>Severity Copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Severity_Level__c</fullName>
        <label>Severity Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Solution_Overview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Overview</label>
        <referenceTo>agf__ADM_Solution_Overview__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Sprint_Name__c</fullName>
        <formula>agf__Sprint__r.Name</formula>
        <label>Sprint Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Sprint_Rank__c</fullName>
        <label>Rank of this work item in a sprint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Sprint_Timeframe__c</fullName>
        <description>The first 8 characters of the sprint name</description>
        <formula>trim(LEFT(agf__Sprint__r.Name,8))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint Timeframe YYYY.MMx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>agf__ADM_Sprint__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acknowledged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Defunct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Eng Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Known Bug Exists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - New Bug Logged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - LAP Request Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - LAP Request Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Resolved With Internal Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Resolved Without Code Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - No Fix - Working as Designed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - No Fix - Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - No Fix - Will Not Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Info Reqd from Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reproducible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Story_Points__c</fullName>
        <label>Story Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Story_Status__c</fullName>
        <formula>IF( ISNULL(agf__Closed_On__c) , &quot;Open&quot;, &quot;Closed&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Story Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Subscribe_to_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscribe to Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__System_Test_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performance Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Test_Engineer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Target_Build__c</fullName>
        <label>Target Build</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Tech_Writer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tech Writer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tech_Writer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Template_Description__c</fullName>
        <label>Template Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Test_Failure_Status__c</fullName>
        <label>Test Failure Status</label>
        <picklist>
            <picklistValues>
                <fullName>Blocking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Test_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Plan</label>
        <referenceTo>agf__QA_Test_Plan__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Theme_Rank__c</fullName>
        <label>Rank of work item for team in a theme</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Theme</label>
        <referenceTo>agf__ADM_Theme__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Total_Age_When_Closed__c</fullName>
        <formula>IF(ISBLANK(agf__Closed_On__c), 0, IF( agf__Created_On_Date__c &gt; DATEVALUE(agf__Closed_On__c), 0, DATEVALUE(agf__Closed_On__c) - agf__Created_On_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Age When Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Trust_Rank__c</fullName>
        <label>Rank of work item for trust</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Type_Value__c</fullName>
        <formula>CASE(agf__Type__c, &quot;Test Failure&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skunkforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Translation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__UE_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UE Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Use_Prioritizer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine whether or not a work record should be shown on the Work Prioritizer page</description>
        <inlineHelpText>Used to determine whether or not a work record should be shown on the Work Prioritizer page</inlineHelpText>
        <label>Include in Prioritize View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__User_Profile_of_the_Creator__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <label>User Profile of the Creator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__User_Type__c</fullName>
        <label>User Type (As a...)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Was_Ever_Returned_to_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox enables tracking which Investigations were ever marked with the status picklist value &quot;returned to support.&quot;</description>
        <label>Was Ever Returned to Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__ftest__c</fullName>
        <inlineHelpText>Document the name of the automated test to prevent this bug happenning again.</inlineHelpText>
        <label>test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__of_Test_Failures__c</fullName>
        <label>Test Failures Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__visual_link_num_of_Test_Failures__c</fullName>
        <formula>HYPERLINK(&quot;https://build2.soma.salesforce.com/luna2/bughandlerreport.faces?workid=&quot;&amp; Name , TEXT(BLANKVALUE(agf__of_Test_Failures__c, 0)) , &quot;new&quot;)</formula>
        <inlineHelpText>The number of test failures associated with this record, updated hourly. Clicking on the number redirects to a report with real-time data, which also shows the fixed test failures associated with the record.</inlineHelpText>
        <label>Test Failures</label>
        <type>Text</type>
    </fields>
    <label>Work</label>
    <nameField>
        <displayFormat>W-{000000}</displayFormat>
        <label>Work ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work</pluralLabel>
    <recordTypes>
        <fullName>agf__Bug</fullName>
        <active>true</active>
        <description>Used to track defects or problems</description>
        <label>Bug</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__Investigation</fullName>
        <active>true</active>
        <description>Used to request R&amp;D triage/diagnosis support for a customer support escalation</description>
        <label>Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__Template</fullName>
        <active>true</active>
        <description>Used to store common values which can then be applied to new Bugs</description>
        <label>Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__ToDo</fullName>
        <active>true</active>
        <description>Used to track a unit of work that does not need to have anything checked into Source Control nor does it need to have auto assignment rules applied</description>
        <label>ToDo</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__User_Story</fullName>
        <active>true</active>
        <description>Used to create feature requests. You are able to check in code against the user story record.</description>
        <label>User Story</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Scheduled_Build_Not_Blank_P4_Status_Chng</fullName>
        <active>true</active>
        <description>Setting the P4 status to something other than --None-- requires that a scheduled build has been entered as well.</description>
        <errorConditionFormula>AND( ISBLANK( agf__Scheduled_Build__c ) ,CONTAINS(TEXT( agf__Perforce_Status__c ), &apos;Open&apos;))</errorConditionFormula>
        <errorMessage>Enter a valid scheduled build when setting the Source Control Status to Open or Open Once.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__ValidateAssigneeOnPeforceStatusOpen</fullName>
        <active>true</active>
        <description>Make sure there is an assignee designated if the source control status is changed to either open or open once.</description>
        <errorConditionFormula>AND(CASE( agf__Perforce_Status__c,
     &quot;Approved - Open&quot;, 1,
     &quot;Approved - Open Once&quot;, 1,
     0) = 1,agf__Assignee__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>agf__Perforce_Status__c</errorDisplayField>
        <errorMessage>An assignee must be specified if the source control status is changed to Approved - Open or Approved - Open Once</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__ValidateQAEngineerWithStatus</fullName>
        <active>true</active>
        <description>QA Engineer field should be populated with Status is set to fixed</description>
        <errorConditionFormula>AND(CASE( agf__Status__c,
&quot;Fixed&quot;, 1,
0) = 1, agf__QA_Engineer__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>agf__QA_Engineer__c</errorDisplayField>
        <errorMessage>A QA Engineer must be specified if the Status is set to Fixed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__ValidateResolvedByWithStatus</fullName>
        <active>false</active>
        <description>Resolved_By__c field should not be populated if the Status indicates the the work record is still unresolved</description>
        <errorConditionFormula>AND(CASE( agf__Status__c,
&quot;New&quot;, 1,
&quot;In Progress&quot;, 1,
0) = 1, agf__Resolved_By__c != &quot;&quot;)</errorConditionFormula>
        <errorMessage>Please update the Status__c field to something other than New or In Progress before populating the Resolved_By__c field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__ValidateScheduledBuildWithStatus</fullName>
        <active>true</active>
        <description>Scheduled Build field should be populated with Status is set to fixed</description>
        <errorConditionFormula>AND(CASE( agf__Status__c,
&quot;Fixed&quot;, 1,
0) = 1, agf__Scheduled_Build__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>agf__Scheduled_Build__c</errorDisplayField>
        <errorMessage>A Scheduled Build must be specified if the Status is set to Fixed</errorMessage>
    </validationRules>
</CustomObject>